2004-10-28  Marcus Brinkmann  <marcus@gnu.org>

	* Initial check-in.